--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "canvas-confetti": "1.9.2",
+    "confetti": "2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
